# BMSTU-IU7-5SEM

./: .gitignore  README.md
AA/diagram/: 2.drawio  3.drawio  4.drawio  5.drawio  6.drawio
AA/dz/: code.cpp  dz.drawio
AA/report/: report.tex
AA/report/2/: 0-intro.tex  1-analysis.tex  2-design.tex  3-impl.tex  4-research.tex  5-conclusion.tex  6-biblio.tex
AA/report/3/: 0-intro.tex  1-analysis.tex  2-design.tex  3-impl.tex  4-research.tex  5-conclusion.tex  6-biblio.tex
AA/report/4/: 0-intro.tex  1-analysis.tex  2-design.tex  3-impl.tex  4-research.tex  5-conclusion.tex  6-biblio.tex
AA/report/5/: 0-intro.tex  1-analysis.tex  2-design.tex  3-impl.tex  4-research.tex  5-conclusion.tex  6-biblio.tex
AA/report/6/: 0-intro.tex  1-analysis.tex  2-design.tex  3-impl.tex  4-research.tex  5-conclusion.tex  6-biblio.tex
AA/report/7/: 0-intro.tex  1-analysis.tex  2-design.tex  3-impl.tex  4-research.tex  5-conclusion.tex  6-biblio.tex
AA/report/common/: title.tex
AA/rk1/report/: main.tex  report.tex
AA/rk1/src/: CMakeLists.txt  benchmark.cpp  main.cpp  rk1.ipynb  run.sh  sparse_matrix.h
AA/src/: 1.ipynb  3.ipynb
AA/src/2/: CMakeLists.txt  benchmark.cpp  main.cpp  run.sh  test.cpp
AA/src/2/matrix/: matrix.h
AA/src/4/: main.cpp  (+5 more)
DB/1/: all.sql  create.sql  drop.sql  er.graphml  gen.ipynb
DB/2/: queries.sql
DB/3/: proc_func_trigger.sql
DB/4/: plpython.sql
DB/5/: json.sql
DB/6/: func.py  main.py
DB/7/: main.py  model.py  to_json.py  to_obj.py  to_sql.py
DB/8/: docker-compose.yml  main.py
DB/rk2/: 1.sql  practice.sql
DB/rk3/: 1.sql  main.py
(+24 files in other folders)
